public/css/home.css
body, html {
    height: 100%;
    margin: 0 auto;
    font: 400 15px/1.8 "Lato", sans-serif;
    color: #777;
}

ul {
    list-style-type: none;
    overflow: hidden;
    padding: 0;
    margin: 0;
}

.ul-nav li {
    float: right;
}

.ul-nav li a:hover {
    color: #C30;
}

.ul-class {
    color: #111;
}

li a {
    color: #111;
    padding-left: 0;
    padding-right: 0;
    text-decoration: none;
}

a.btn {
    display: inline-block;
    color: #666;
    background-color: #eee;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-size: 12px;
    padding: 10px 30px;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border: 1px solid rgba(0,0,0,0.3);
    border-bottom-width: 3px;
    text-decoration: none;
}

a.btn:hover {
    background-color: #e3e3e3;
    border-color: rgba(0,0,0,0.5);
}

.videowrapper {
    position: absolute;
    margin: auto;
    right: 0;
    bottom: 0;
    left: 0;
    top: 0;
    width: 75%;
    height: 75%;
}

.videowrapper img {
    position: absolute;
    margin: auto;
    right: 0;
    bottom: 0;
    left: 0;
    top: 0;
    width: 70%;
    height: auto;
}

.paralogo, .paraimg1, .paraimg2, .paraimg3 {
    position: relative;
    opacity: 1.0;
    /*background-attachment: fixed;*/
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.paralogo {
    background-image: url("/img/bd-guild-logo.png");
    min-height: 100%;
}

.paraimg1 {
    background-image: url("/img/background-illidan-still.jpg");
    min-height: 100%;
    -webkit-filter: sepia(80%);
    filter: sepia(80%);
}

.paraimg2 {
    background-image: url("/img/background-illidan-partied-cropped.jpg");
    min-height: 200px;
}

.paraimg3 {
    background-image: url("/img/background-illidan-large.jpg");
    min-height: 100%;
    background-position: left;
}

header {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    font-size: 72px;
    line-height: 108px;
    height: 125px;
    background: #111;
    color: #fff;
    font: 20px "Lato", sans-serif;
}

header.guild-name-banner-sticky {
    position: fixed;
    top: 0;
    font-size: 24px;
    line-height: 100px;
    height: 8%;
    color: #111;
    background: #fff;
    font: 20px "Lato", sans-serif;
    transition: all 0.8s ease;
}

.caption {
    position: absolute;
    left: 0;
    top: 60%;
    width: 100%;
    text-align: center;
    background-color: rgba(60, 60, 60, 0.4);
}

.caption span.border {
    color: #fff;
    padding: 10px;
    font-size: 3vw;
    letter-spacing: 6px;
}

header span.border {
    color: #111;
    font-size: 25px;
    letter-spacing: 8px;
}

.border-text {
    color: #111;
    letter-spacing: 3px;
    font-size: 20px;
}

.border-nav {
    color: #111;
    letter-spacing: 1px;
    font-size: 14px;
    height: 100%;
}

@media screen and (max-width: 768px) {
    .caption span.border {
        font-size: 2.5vw;
        letter-spacing: 4px;
    }

    header span.border {
        font-size: 2.5vw;
        letter-spacing: 4px;
    }

    .border-text {
        letter-spacing: 0;
    }

    .border-nav {
        letter-spacing: 0;
    }

    body, html {
        font: 14px "Lato", sans-serif;
    }

    .videowrapper img {
        width: 100%;
    }
}

.blurb {
    color: #777;
    background-color: #fff;
    text-align: center;
    padding: 40px 40px;
    text-align: justify;
}

h3 {
    margin-top: -10px;
    letter-spacing: 3px;
    text-transform: uppercase;
    font: 20px "Lato", sans-serif;
    color: #111;
}

h2 {
    letter-spacing: 3px;
    text-transform: uppercase;
    font: 16px "Lato", sans-serif;
    color: #111;
}

